<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ets.android_team.bahaa.moviesapp.MovieDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/movie_poster_details"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/margin_top"
            app:riv_border_color="@color/colorAccent"
            app:riv_border_width="2dp" />

        <TextView
            android:layout_width="@dimen/title_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/views_margin_left"
            android:layout_marginTop="@dimen/title_margin_top"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/movie_title"
            android:textSize="@dimen/font_main"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_title_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/views_margin_left"
            android:layout_marginTop="@dimen/titlecont_margin_top"
            android:fontFamily="sans-serif"
            android:paddingRight="@dimen/title_padding_right"
            android:textSize="@dimen/font_regular" />

        <TextView
            android:layout_width="@dimen/release_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/views_margin_left"
            android:layout_marginTop="@dimen/release_margin_top"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/release_date"
            android:textSize="@dimen/font_main"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/release_date_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/views_margin_left"
            android:layout_marginTop="@dimen/releasecont_margin_top"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/font_regular" />


        <TextView
            android:layout_width="@dimen/release_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/views_margin_left"
            android:layout_marginTop="@dimen/avg_margin_top"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/vote_avg"
            android:textSize="@dimen/font_main"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vote_avg_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/views_margin_left"
            android:layout_marginTop="@dimen/avgval_margin_top"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/font_regular" />

        <TextView
            android:layout_width="@dimen/release_width"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/views_margin_left"
            android:layout_marginTop="@dimen/plot_margin_top"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/movie_plot"
            android:textSize="@dimen/font_main"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_plot_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/views_margin_left"
            android:layout_marginTop="@dimen/plotcont_margin_top"
            android:fontFamily="sans-serif"
            android:paddingBottom="@dimen/padding_bottom"
            android:paddingRight="@dimen/padding_right"
            android:textSize="@dimen/font_regular" />

        <View
            android:id="@+id/spaceBar"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/movie_plot_details"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:alpha="0.3"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/trailer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spaceBar"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/movie_trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/views_margin_left"
                android:drawableLeft="@drawable/ic_play"
                android:drawablePadding="4dp"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingRight="@dimen/padding_right"
                android:text="@string/trailer"
                android:textSize="24sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <View
            android:id="@+id/spaceBar2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/trailer_layout"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:alpha="0.3"
            android:background="#000000" />

        <RelativeLayout
            android:id="@+id/reviews_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/trailer_layout"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/review_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/views_margin_left"
                android:fontFamily="sans-serif-condensed"
                android:paddingBottom="@dimen/padding_bottom"
                android:paddingRight="@dimen/padding_right"
                android:text="@string/reviews"
                android:textSize="24sp"
                android:textStyle="bold" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_rv"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_below="@id/review_txt"
                android:layout_marginLeft="@dimen/views_margin_left"
                android:paddingBottom="4dp"
                android:paddingRight="4dp" />


        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
